# m5paper-homeassistant

./: CMakeLists.txt  project_include.cmake  sdkconfig
components/m5epd_lvgl/: CMakeLists.txt  m5epd_lvgl.cpp  m5epd_lvgl.h
main/: CMakeLists.txt  application.cpp  application.hpp  hello_world_main.cpp  idf_component.yml  nv_config.cpp  nv_config.hpp
